# Monstrino

./: .gitignore  .gitmodules  CODE_REVIEW.md  LICENSE  LICENSE-DATA  LICENSE-MEDIA-NOTICE  README.md  README2.md  package-lock.json  package.json
services/acquisition/catalog-collector/: .env.db_test  Makefile  pyproject.toml
services/acquisition/catalog-collector/src/app/: container.py  wiring.py
services/acquisition/catalog-collector/src/app/bootstrap/: __init__.py  adapters_builder.py  dispatchers_builder.py  parse_jobs_builder.py  registry_config.py  repo_builder.py  services_builder.py  uow_factory_config.py  validators_builder.py
services/acquisition/catalog-collector/src/app/commands/: __init__.py  parse_command.py
services/acquisition/catalog-collector/src/app/container_components/: __init__.py  adapters.py  parse_jobs.py  repositories.py  services.py
services/acquisition/catalog-collector/src/app/dispatchers/: parsing_characters_dispatcher.py  parsing_dispatcher.py  parsing_pets_dispatcher.py  parsing_releases_dispatcher.py  parsing_series_dispatcher.py
services/acquisition/catalog-collector/src/app/gateways/: dolls_service_gateway.py
services/acquisition/catalog-collector/src/app/interfaces/: __init__.py  domain_dispatcher.py  scenario_validator.py
services/acquisition/catalog-collector/src/app/use_cases/: publich_kafka_message_use_case.py
services/acquisition/catalog-collector/src/application/dispatchers/: __init__.py  parsing_characters_dispatcher.py  parsing_dispatcher.py  parsing_pets_dispatcher.py  parsing_releases_dispatcher.py  parsing_series_dispatcher.py
services/acquisition/catalog-collector/src/application/interfaces/: domain_dispatcher.py  parse_command.py
services/acquisition/catalog-collector/src/application/ports/: scheduler_port.py  website_catalog_port.py
services/acquisition/catalog-collector/src/application/services/: parser_service.py
services/acquisition/catalog-collector/src/application/use_cases/: getDollsUseCase.py  parse_website.py  (+1 more)
services/acquisition/catalog-collector/src/bootstrap/: container.py
services/acquisition/catalog-collector/src/data/: page.html
services/acquisition/catalog-collector/src/presentation/: api_config.py  app_config.py  cors.py  deps.py
services/acquisition/catalog-collector/tests/: conftest.py
services/acquisition/catalog-collector/tests/fixtures/: __init__.py  adapters.py  registry.py
services/acquisition/catalog-importer/: .env.db_local.example  .env.db_test.example  Dockerfile  Makefile  debug_db_check.py  debug_db_performance.sql  pyproject.toml
services/acquisition/catalog-importer/src/app/: __init__.py  wiring.py
services/acquisition/catalog-importer/src/bootstrap/: container.py  wiring.py
services/acquisition/catalog-importer/src/presentation/: api_config.py  app_factory.py
services/acquisition/catalog-importer/tests/fixtures/: __init__.py
services/acquisition/catalog-importer/tests/mocks/: fake_unit_of_work.py
services/ai/ai-intake-service/: Makefile  pyproject.dev.toml  pyproject.toml
services/ai/ai-intake-service/src/: main.py
services/ai/ai-intake-service/src/bootstrap/: container.py
services/catalog/release-catalog-service/: .gitignore  Makefile  pyproject.toml
services/catalog/release-catalog-service/src/presentation/: api_config.py
services/catalog/release-catalog-service/tests/: conftest.py
services/dolls/dolls-importer/: Makefile  pyproject.toml
services/dolls/dolls-importer/src/app/: container.py  wiring.py
services/dolls/dolls-importer/src/presentation/: api_config.py  app_config.py  deps.py
services/dolls/dolls-importer/tests/: conftest.py
services/media/media-rehosting-service/: Makefile  README.md  pyproject.dev.toml  pyproject.toml
services/media/media-rehosting-service/src/bootstrap/: container.py
services/media/media-rehosting-service/tests/: conftest.py
services/platform/backgroud-removal-service/: .env.example  .gitignore  CHANGELOG.md  Dockerfile  EXAMPLES.md  FAQ.md  Makefile  PROJECT_STRUCTURE.md  QUICKSTART.sh  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.sh  test_service.py
services/platform/backgroud-removal-service/app/: __init__.py  config.py  main.py
services/platform/backgroud-removal-service/app/api/: routes.py
services/platform/backgroud-removal-service/app/core/: exceptions.py  logging.py
services/platform/backgroud-removal-service/app/services/: model_loader.py  segmentation.py
services/platform/backgroud-removal-service/app/utils/: image_processing.py  mask_postprocessing.py
services/platform/backgroud-removal-service/tests/: test_api.py  test_mask_postprocessing.py
services/platform/llm-gateway/: Makefile  pyproject.toml
services/platform/llm-gateway/src/app/: wiring.py
services/platform/llm-gateway/tests/: conftest.py
services/platform/llm-gateway/tests/fixtures/: __init__.py  http_client.py  ollama_client.py
services/sandbox-service/: Makefile  pyproject.toml  pytest.ini
services/sandbox-service/tests/: conftest.py
services/sandbox-service/tests/fixtures/: __init__.py
services/sandbox-service/tests/fixtures/data/: __init__.py  character_genders_data.py  characters_data.py
services/sandbox-service/tests/fixtures/db/: repositories_fixture.py  unit_of_work_fixture.py
services/sandbox-service/tests/integration/repositories/: test_character_genders_repo.py  test_characters_repo.py
services/sandbox-service/tests/mocks/: fake_unit_of_work.py
services/support/template-service-v2/: Dockerfile  Makefile  pyproject.dev.toml  pyproject.toml
services/support/template-service-v2/src/bootstrap/: wiring.py
services/support/template-service-v2/src/presentation/: api_config.py  app_factory.py
services/support/testing-service/: Helper.md  Makefile  main.py  pyproject.dev.toml  pyproject.toml  pyproject_old.toml
services/support/testing-service/tests/: conftest.py
services/user/users-service/: pyproject.toml
services/user/users-service/src/: main.py  scripts.py
services/user/users-service/src/presentation/: api_config.py  app_config.py
(+2229 files in other folders)
