[project]
name = "catalog-collector"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.3"
dependencies = [
    "aiohttp[speedups]>=3.13.2",
    "aiokafka>=0.12.0",
    "alembic>=1.17.2",
    "apscheduler>=3.11.2",
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
    "beautifulsoup4>=4.14.3",
    "brotli>=1.2.0",
    "coloredlogs>=15.0.1",
    "colorlog>=6.10.1",
    "fastapi>=0.127.0",
    "html5lib>=1.1",
    "icecream>=2.1.8",
    "lxml>=5.4.0",
    "monstrino-api",
    "monstrino-contracts",
    "monstrino-core",
    "monstrino-infra",
    "monstrino-models",
    "monstrino-repositories",
    "monstrino-testing",
    "playwright>=1.57.0",
    "psycopg>=3.3.2",
    "psycopg-binary>=3.3.2",
    "psycopg2>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.1",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "requests-oauthlib>=2.0.0",
    "slugify>=0.0.1",
    "sqlalchemy>=2.0.45",
    "starlette>=0.46.2",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
    "uvicorn>=0.34.3",
    "watchfiles>=1.1.1",
    "zstandard>=0.25.0",
]

[tool.poetry]
package-mode = false


[tool.pytest.ini_options]
pythonpath = [
    "src"
]

[tool.uv.sources]
monstrino-core = { git = "ssh://git@github.com/MafiaCoconut/monstrino-core.git", rev = "v0.1.3" }
monstrino-models = { git = "ssh://git@github.com/MafiaCoconut/monstrino-models.git", rev = "v0.1.5" }
monstrino-repositories = { git = "ssh://git@github.com/MafiaCoconut/monstrino-repositories.git", rev = "v0.1.4" }
monstrino-api = { git = "ssh://git@github.com/MafiaCoconut/monstrino-api.git", rev = "v0.1.1" }
monstrino-testing = { git = "ssh://git@github.com/MafiaCoconut/monstrino-testing.git", rev = "v0.1.2" }
monstrino-infra = { git = "ssh://git@github.com/MafiaCoconut/monstrino-infra.git", rev = "v0.1.3" }
monstrino-contracts = { git = "ssh://git@github.com/MafiaCoconut/monstrino-contracts.git", rev = "v0.1.0" }
