[project]
name = "dolls-importer"
version = "0.1.0"
description = ""
authors = [
    {name = "MafiaCoconut",email = "alex.kach.2000@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler (>=3.11.0,<4.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "aiohttp (>=3.11.18,<4.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "icecream (>=2.1.4,<3.0.0)",
    "psycopg (>=3.2.7,<4.0.0)",
    "psycopg-binary (>=3.2.7,<4.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "lxml (>=5.4.0,<6.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "requests-oauthlib (>=2.0.0,<3.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "watchfiles (>=1.0.5,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "starlette (>=0.46.2,<0.47.0)",
    "pytz (>=2025.2,<2026.0)",
    "coloredlogs (>=15.0.1,<16.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "colorlog (>=6.9.0,<7.0.0)",
    "monstrino-models @ file:///home/coconut/Projects/Monstrino/monstrino-models",
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
monstrino-models = {develop = true}
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


#    "monstrino-models @ file:///home/coconut/Projects/Monstrino/monstrino-models",
