[project]
name = "llm-gateway"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
    "aiobreaker>=1.2.0",
    "asyncpg>=0.31.0",
    "backoff>=2.2.1",
    "coloredlogs>=15.0.1",
    "colorlog>=6.10.1",
    "fastapi>=0.122.1",
    "httpx[http2]>=0.28.1",
    "icecream>=2.1.8",
    "lxml>=6.0.2",
    "psycopg>=3.2.13",
    "psycopg-binary>=3.2.13",
    "psycopg2>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "python-dotenv>=1.2.1",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "requests-oauthlib>=2.0.0",
    "starlette>=0.50.0",
    "uvicorn>=0.38.0",
    "watchfiles>=1.1.1",
]

[tool.poetry]
package-mode = false

[tool.pytest.ini_options]
pythonpath = [
    "src"
]
