[project]
name = "template-service-v2"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.14"
authors = [{name = "MafiaCoconut"}]

dependencies = []

[tool.poetry]
package-mode = false

[tool.mypy]
plugins = ["sqlalchemy.ext.mypy.plugin"]

[tool.pytest.ini_options]
pythonpath = [
    "src"
]

[tool.uv.sources]
monstrino-core = { git = "ssh://git@github.com/MafiaCoconut/monstrino-core.git", rev = "v0.1.4" }

[dependency-groups]
dev = [
    "mypy>=1.19.1",
]
