[project]
name = "testing-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
    "asyncpg>=0.30.0",
    "monstrino-testing",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "sqlalchemy>=2.0.44",
]

[tool.uv.sources]
monstrino-testing = { git = "ssh://github.com/MafiaCoconut/monstrino-testing.git", rev = "v0.1.1" }
