[project]
name = "testing-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
    "asyncpg>=0.30.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "sqlalchemy>=2.0.44",
    "monstrino-core",
    "monstrino-models",
    "monstrino-repositories",
    "monstrino-testing",

]

[tool.uv.sources]
monstrino-core = { path = "../../../packages/monstrino-core", editable = true }
monstrino-models = { path = "../../../packages/monstrino-models", editable = true }
monstrino-repositories = { path = "../../../packages/monstrino-repositories", editable = true }
monstrino-testing = { path = "../../../packages/monstrino-testing", editable = true }



