[project]
name = "testing-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
    "asyncpg>=0.30.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "sqlalchemy>=2.0.44",
    "monstrino-core",
    "monstrino-models",
    "monstrino-repositories",
    "monstrino-testing",

]

[tool.uv.sources]
monstrino-core = { path = "ssh://git@github.com/MafiaCoconut/monstrino-core.git", rev = "v0.1.2" }
monstrino-models = { path = "ssh://git@github.com/MafiaCoconut/monstrino-models.git", rev = "v0.1.3" }
monstrino-repositories = { path = "ssh://git@github.com/MafiaCoconut/monstrino-repositories.git", rev = "v0.1.2" }
monstrino-testing = { path = "ssh://git@github.com/MafiaCoconut/monstrino-testing.git", rev = "v0.1.1" }



