[project]
name = "users-service"
version = "0.1.0"
description = ""
authors = [
    {name = "MafiaCoconut",email = "alex.kach.2000@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "apscheduler (>=3.11.0,<4.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "aiohttp (>=3.12.15,<4.0.0)",
    "aiolimiter (>=1.2.1,<2.0.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "icecream (>=2.1.5,<3.0.0)",
    "psycopg (>=3.2.9,<4.0.0)",
    "psycopg-binary (>=3.2.9,<4.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "lxml (>=6.0.0,<7.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "requests-oauthlib (>=2.0.0,<3.0.0)",
    "sqlalchemy (>=2.0.42,<3.0.0)",
    "watchfiles (>=1.1.0,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "pytz (>=2025.2,<2026.0)",
    "coloredlogs (>=15.0.1,<16.0.0)",
    "colorlog (>=6.9.0,<7.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
